# small_gl_core

./: .gitignore  Cargo.toml  ReadMe.md
examples/assimp_report/: assimp_report.rs
examples/sample_animation/: 1-model_loading.vert  anim_model.vert  anim_model_colors.frag  anim_model_colors.vert  cube_object.rs  sample_animation.rs
glad-gl/src/: gl.rs
src/: animation.rs  animator.rs  assimp_dump.rs  assimp_scene.rs  assimp_utils.rs  bone.rs  bone_data.rs  camera.rs  error.rs  gl.rs  hash_map.rs  lib.rs  macros.rs  math.rs  mesh.rs  model.rs  model_animation.rs  model_mesh.rs  node_animation.rs  shader.rs  sprite_model.rs  texture.rs  utils.rs
