[package]
name = "small_gl_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.2"
image = "0.24.7"
#russimp = "2.0.6"

#russimp = { git = " https://github.com/jkvargas/russimp.git" }
russimp = { path = "../russimp_rockfish" }
log = "0.4.20"

[dev-dependencies]
glfw = "0.54.0"
log = "0.4.20"

[[example]]
name = "sample_animation"
path = "examples/sample_animation/sample_animation.rs"

